# bthome-sensor-zephyr

./: .gitignore  CMakeLists.txt  Kconfig  README.md  debug.conf  prj copy.conf  prj.conf
apps/: main2.c  test.c
apps/adc/: CMakeLists.txt  prj.conf
apps/adc/src/: main.c
apps/bthome_aht10/: CMakeLists.txt
apps/bthome_aht10/src/: main.c
apps/bthome_aht10_bmp280/: prj.conf
apps/bthome_aht10_bmp280/src/: main.c
apps/bthome_ds18b20/: CMakeLists.txt  prj.conf
apps/bthome_ds18b20/src/: main.c
apps/bthome_energy/: CMakeLists.txt  prj.conf
apps/bthome_energy/src/: main.c
apps/data_logger/: Kconfig  prj.conf
apps/data_logger/src/: main.c
apps/dht_polling/: prj.conf
apps/dht_polling/src/: main.c
apps/ds18b20/: CMakeLists.txt  prj.conf
apps/ds18b20/src/: main.c
apps/sensor_shell/: prj.conf
apps/sensor_shell/src/: main.c
boards/myboards/nrf51_ibks105/: Kconfig.defconfig  Kconfig.nrf51_ibks105  board.yml  nrf51_ibks105-pinctrl.dtsi  nrf51_ibks105.dts  nrf51_ibks105.yaml  nrf51_ibks105_defconfig
boards/myboards/snes_gamepad_nrf52840/: Kconfig  Kconfig.defconfig  Kconfig.snes_gamepad_nrf52840  board.cmake  board.yml  fstab-uf2.dtsi  snes_gamepad_nrf52840-pinctrl.dtsi  snes_gamepad_nrf52840.dts  snes_gamepad_nrf52840.yaml  snes_gamepad_nrf52840_defconfig
include/: bthome.h  sensors.h
lib/: CMakeLists.txt  Kconfig
lib/bthome/: CMakeLists.txt  Kconfig  bthome.c
lib/sensors/: CMakeLists.txt  Kconfig  sensors.c
scripts/: bthome.py
src/: main.c
